[FIX] Better article title color contrast.

--- a/mods/trunk/themes/underground_tiki_3/styles/underground.css
+++ b/mods/trunk/themes/underground_tiki_3/styles/underground.css
@@ -784,6 +784,12 @@ div.articletitle h2 {
 	text-transform: uppercase; 
 	background: #CC0000;	
 	letter-spacing: .5px}
+	
+div.articletitle h2 a,
+div.articletitle h2 a:visited,
+div.articletitle h2 a:hover {
+	color: #fff;
+}
 
 span.titleb {
 	font-size: 1.0em}
